--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -1,5 +1,115 @@
 [Window][Debug##Default]
-Pos=1463,12
+Pos=1454,100
 Size=321,200
 Collapsed=0
+
+[Window][My First Tool]
+Pos=701,22
+Size=1085,489
+Collapsed=0
+
+[Window][Hello, world!]
+Pos=240,246
+Size=370,180
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=453,109
+Size=670,677
+Collapsed=0
+
+[Window][Another Window]
+Pos=183,534
+Size=198,71
+Collapsed=0
+
+[Window][Delete?]
+Pos=744,441
+Size=311,118
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=707,372
+Size=409,172
+Collapsed=0
+
+[Window][Hanoi control panel]
+Pos=1493,18
+Size=279,129
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=64,82
+Size=430,450
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=146,140
+Size=200,200
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=607,921
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=49,57
+Size=339,902
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=568,488
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=278,236
+Size=449,63
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=245,50
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=97,293
+Size=449,63
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=77
+Column 3  Width=69
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
